--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,9 @@ body {
   
   .logo {
     width: 100px; /* Tamaño del logo */
+    margin-left: 100px;
   }
+
   
   nav ul {
     list-style-type: none;
